<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/groundLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/simpleGrey">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textAllCaps="false"
            android:elevation="4dp"
            android:padding="5dp"
            android:text="@string/text_tremor1_reset"
            android:textAlignment="center"
            android:textSize="12pt"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            tools:ignore="ButtonStyle" />


        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:padding="5dp"
            android:text="@string/text_tremor1_fertig"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="12pt"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/taskLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">





        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="3dp">

            <ImageView
                android:id="@+id/form_iv"
                android:layout_width="20mm"
                android:layout_height="20mm"
                android:layout_weight="0.5"
                android:background="@color/white"
                android:contentDescription="@string/text_datenanalyse_vorschaubild"
                android:src="@drawable/wuerfel"
                tools:ignore="InOrMmUsage" />

            <TextView
                android:id="@+id/aufgabe_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@color/white"
                android:text="@string/text_cubeCopy"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="11pt" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/spenViewLayout"
            android:layout_width="60mm"
            android:layout_height="70mm"
            android:orientation="vertical"
            tools:ignore="InOrMmUsage"> <!-- Height = Total height - height of task text -->

        </LinearLayout>

    </LinearLayout>
</LinearLayout>

