<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="moca.clockdraw.MainMenu">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/taskLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="1"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/startTest_b"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="0.5"
            android:clickable="true"
            android:background="@drawable/customborder"
            android:focusable="true">

            <Button
                android:clickable="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_mainmenu_teststarten"
                app:layout_constraintHorizontal_bias="0.652"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="248dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@color/white"
                android:src="@drawable/icon_test_starten"
                android:contentDescription="@string/text_datenanalyse_vorschaubild"
                tools:ignore="NestedWeights" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/startDataAnalyse_b"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="0.5"
            android:clickable="true"
            android:background="@drawable/customborder"
            android:focusable="true">

            <Button
                android:clickable="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_mainmenu_datenanalysieren"
                app:layout_constraintHorizontal_bias="0.652"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="248dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@color/white"
                android:src="@drawable/icon_analyse"
                android:contentDescription="@string/text_datenanalyse_vorschaubild"
                tools:ignore="NestedWeights"/>
        </LinearLayout>

    </LinearLayout>








</android.support.constraint.ConstraintLayout>
